welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:3: error: not found: value summer
    if(59<temp && summer<101){return true}
                  ^squirrelPlay:7: error: not found: value summer
    if(59<temp && summer<91){return true} 
                  ^