welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
  if(isSummer){
    if(59<temp && summer<101){return true}
    else{return false}
  }
  else{
    if(59<temp && summer<91){return true} 
    else{return false}
  }
}